--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,58 @@
   box-sizing: border-box;
   list-style: none;
 }
+@font-face {
+  font-family: Shopify;
+  src: url(ShopifySans--bold.woff2);
+}
+@font-face {
+  font-family: ShopifyBold;
+  src: url(ShopifySans--extrabold.woff2);
+}
+
+:focus{
+  border: 2px solid lightskyblue; 
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit; 
+  margin: 0; 
+}
+
+.dropdown:hover .dropbtn {
+  background-color: rgb(190, 27, 27);
+}
 
 .dropdown-content {
   display: none;
-  background-color: rgba(87, 11, 11, 0.9);
-  color: white;
+  position: absolute;
+  background-color: #f9f9f9;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
   padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
 }
 
 .dropdown:hover .dropdown-content {
@@ -27,13 +71,33 @@ ul li {
   color: white;
 }
 
+/* ANIMACIONES DE NAVBAR */
+.navbar-links li a {
+  display: block;
+  text-decoration: none;
+  color: #444;
+  padding: 20px 20px;
+  font-weight: 700;
+  transition: 0.4s all;
+}
+
+.dropdown .dropdown-content a:hover {
+  padding-left: 30px;
+}
+
+.navbar-links li a:hover {
+  color: #ff3f34;
+}
+/* TERMINA ANIMACIONES DE NAVBAR */
+
 header {
-  height: 60px;
+  height: 70px;
   background-color: black;
   display: flex;
   justify-content: space-between;
-  background-image: url(/bootcampLandingPage/logo.jpg);
-  background-size: 8rem;
+  background-image: url(/bootcampLandingPage/Shopify-Plus-Logo-White.png);
+  background-size: 7rem;
+  background-position: 5px;
   background-repeat: no-repeat;
 }
 
@@ -44,3 +108,68 @@ header {
 .rightSide{
   padding-right: 50px;
 }
+
+.container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
+  background-color: #15141b;
+  font-family: Shopify;
+}
+
+.box-text{
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  width: 50%;
+}
+.second-container{
+  padding: 83px;
+}
+.box-video{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+.firt-text{
+  color: yellow;
+  font-size:  1.125rem;
+}
+.title{
+  font-size: 5rem;
+  color: white;
+  font-family: ShopifyBold;
+}
+.second-text{
+  font-size:  1rem;
+  color: white;
+  margin-bottom: 15px;
+}
+.style-btn{
+  border: none;
+  border-radius: 5px;
+  height: 40px;
+  width: 100px;
+  font-weight: bold;
+  background-color: #d0f224;
+}
+.img{
+  border-radius: 5px;
+  height: 50px;
+}
+.btn-float {
+position: fixed;
+bottom: 40px;
+right: 40px;
+transition: all 300ms ease 0ms;
+box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+z-index: 99;
+}
+.btn-float:hover {
+box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.3);
+transform: translateY(-7px);
+}
+
